# aaib-collector

./: .env.example  README.md  main.py  pyproject.toml
src/: aggregate_data.py  config.py  download_pdfs.py  extract_fields.py  extract_text.py  fetch_links.py
